spark read json file

--- a/my_spark.ipynb
+++ b/my_spark.ipynb
@@ -6,7 +6,7 @@
       "name": "my-spark.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPy/AjXJ/NtC43MHNCMHwOz",
+      "authorship_tag": "ABX9TyN+LoEaPEiw04zHMegXMuBv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +29,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **Initial Spark**"
+      ],
+      "metadata": {
+        "id": "8Z54jYXUY1k8"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!apt-get install openjdk-8-jdk-headless -qq > /dev/null"
@@ -36,7 +45,7 @@
       "metadata": {
         "id": "dl03AdzlW7ph"
       },
-      "execution_count": 22,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -47,7 +56,7 @@
       "metadata": {
         "id": "ZqZy6c_FW8wv"
       },
-      "execution_count": 23,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -58,7 +67,7 @@
       "metadata": {
         "id": "GY0yYCTQW93Q"
       },
-      "execution_count": 24,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -69,7 +78,7 @@
       "metadata": {
         "id": "G4gTZnfuXTfb"
       },
-      "execution_count": 25,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -82,7 +91,7 @@
       "metadata": {
         "id": "KVfzqQFiWStb"
       },
-      "execution_count": 26,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -94,7 +103,7 @@
       "metadata": {
         "id": "YrWJjTl1WUE_"
       },
-      "execution_count": 27,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -108,9 +117,9 @@
           "height": 35
         },
         "id": "iJtdiNrxXa5H",
-        "outputId": "d8fd45f8-c046-4692-9715-520c32c18f47"
+        "outputId": "0c0f1f30-1a73-4dc4-c90a-6a7e17315501"
       },
-      "execution_count": 28,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -123,7 +132,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 37
         }
       ]
     },
@@ -141,7 +150,7 @@
       "metadata": {
         "id": "EB2PuQFhXb32"
       },
-      "execution_count": 29,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -155,9 +164,9 @@
           "height": 219
         },
         "id": "8Ql-P234Xe3T",
-        "outputId": "35b2c78d-2602-4550-910a-4307e4c495d9"
+        "outputId": "786572ac-ee19-44d6-9b38-786930479ac5"
       },
-      "execution_count": 30,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -190,7 +199,57 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Spark DataFrame Basics**"
+      ],
+      "metadata": {
+        "id": "B6Ft81DKY_qU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = spark.read.json('people.json')"
+      ],
+      "metadata": {
+        "id": "H5YsXNncZJtu"
+      },
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1h71Aik-am2i",
+        "outputId": "2ac68853-8538-4dd8-dc05-60b9528bc3ad"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+-------+\n",
+            "| age|   name|\n",
+            "+----+-------+\n",
+            "|null|Michael|\n",
+            "|  30|   Andy|\n",
+            "|  19| Justin|\n",
+            "+----+-------+\n",
+            "\n"
+          ]
         }
       ]
     }
