--- a/my_spark.ipynb
+++ b/my_spark.ipynb
@@ -6,7 +6,7 @@
       "name": "my-spark.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN+LoEaPEiw04zHMegXMuBv",
+      "authorship_tag": "ABX9TyOWNmY9GCsR3UDV1WlksWtM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -252,6 +252,198 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.printSchema()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "U5ysB4rya_mx",
+        "outputId": "6bf6b3c6-ac6f-4c1f-fd74-58d6670dca70"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "root\n",
+            " |-- age: long (nullable = true)\n",
+            " |-- name: string (nullable = true)\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.columns"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t2S7FUvbbMEu",
+        "outputId": "6ffa8b08-2ca9-43d1-e990-ab8fb64c7fca"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['age', 'name']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.describe()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G7YtTZGqbPVR",
+        "outputId": "0773e222-8967-46de-ae1b-1bb92231b82d"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DataFrame[summary: string, age: string, name: string]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.describe().show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dme5Zl3NbVwZ",
+        "outputId": "ea349f2c-9704-481b-fc49-0dba3c732a47"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-------+------------------+-------+\n",
+            "|summary|               age|   name|\n",
+            "+-------+------------------+-------+\n",
+            "|  count|                 2|      3|\n",
+            "|   mean|              24.5|   null|\n",
+            "| stddev|7.7781745930520225|   null|\n",
+            "|    min|                19|   Andy|\n",
+            "|    max|                30|Michael|\n",
+            "+-------+------------------+-------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pyspark.sql.types import (StructField, StringType, IntegerType, StructType)"
+      ],
+      "metadata": {
+        "id": "kCfXrbl6bZ3r"
+      },
+      "execution_count": 51,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_schema = [StructField('age',IntegerType(),True),\n",
+        "               StructField('name',StringType(),True) ]"
+      ],
+      "metadata": {
+        "id": "BAJtwPDjcCmg"
+      },
+      "execution_count": 52,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "final_struc = StructType(fields=data_schema)"
+      ],
+      "metadata": {
+        "id": "_YnVX7AzcbkG"
+      },
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = spark.read.json('people.json',schema=final_struc)"
+      ],
+      "metadata": {
+        "id": "0KmT8xIJc1Dr"
+      },
+      "execution_count": 54,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.printSchema()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I_BfNl1-dN02",
+        "outputId": "8d6c71a2-7245-46d1-9a0b-df7ea8cacd25"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "root\n",
+            " |-- age: integer (nullable = true)\n",
+            " |-- name: string (nullable = true)\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "J3pLwiA3c8fK"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
