--- a/my_spark.ipynb
+++ b/my_spark.ipynb
@@ -6,7 +6,7 @@
       "name": "my-spark.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOWNmY9GCsR3UDV1WlksWtM",
+      "authorship_tag": "ABX9TyOfZHSvYIqrcFuD8GpcYEmq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -435,15 +435,562 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "# type , select , head"
       ],
       "metadata": {
-        "id": "J3pLwiA3c8fK"
+        "id": "iBD_niDDhN74"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['age']"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "J3pLwiA3c8fK",
+        "outputId": "62ef66a7-ecfe-48e7-e7f6-6b1452c908ec"
       },
-      "execution_count": null,
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Column<b'age'>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(df['age'])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HbvmVyOXgAFH",
+        "outputId": "7ec7d92c-28de-449b-87d8-c8855b62b5dc"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "pyspark.sql.column.Column"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 57
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.select('age')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W_Or_x58gCSX",
+        "outputId": "d1e037a9-0f71-4eec-b886-607ce48b7ef0"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DataFrame[age: int]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(df.select('age'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PO_8JUfegVmn",
+        "outputId": "26e9f0a2-308a-496f-d6f8-fb05aae8bb52"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "pyspark.sql.dataframe.DataFrame"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.select('age').show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "h0KnSDJIgJ3h",
+        "outputId": "092f84e9-f6e1-4b33-aa76-36ccdb23efea"
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+\n",
+            "| age|\n",
+            "+----+\n",
+            "|null|\n",
+            "|  30|\n",
+            "|  19|\n",
+            "+----+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.select(['age','name'])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FTyoik-JhCCw",
+        "outputId": "7cef642d-82ac-4830-d4a8-f0fa21bffb40"
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DataFrame[age: int, name: string]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(df.select(['age','name']))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QnUonJFBhGS9",
+        "outputId": "182c7871-e1e5-4ddc-9cec-8cbf07d1dd57"
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "pyspark.sql.dataframe.DataFrame"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 66
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.select(['age','name']).show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "O0z5gjXahIUW",
+        "outputId": "923e5aea-9771-4dfc-b143-00a1a61fed1d"
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+-------+\n",
+            "| age|   name|\n",
+            "+----+-------+\n",
+            "|null|Michael|\n",
+            "|  30|   Andy|\n",
+            "|  19| Justin|\n",
+            "+----+-------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.head(2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Hj9tNf12gfML",
+        "outputId": "978db960-4a36-44c6-e4f1-e72e8ed1b5bb"
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Row(age=None, name='Michael'), Row(age=30, name='Andy')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 61
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(df.head(2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G5G19xA6grAk",
+        "outputId": "4c0116ae-7cf8-4eb2-d25d-c42513f064f1"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "list"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.head(2)[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pZ7IxC5rggsx",
+        "outputId": "761c736a-182b-443c-88e6-0356bd59a8c7"
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Row(age=None, name='Michael')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 62
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(df.head(2)[0])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jdUOZSGAgsla",
+        "outputId": "6e7e0d39-be97-4237-c31b-0babc1efae26"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "pyspark.sql.types.Row"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# column"
+      ],
+      "metadata": {
+        "id": "qdkfiPtkh2CO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.withColumn('newage',df['age']).show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HlK5bur5h4uc",
+        "outputId": "4a6eef11-4477-48ad-ee54-d571f280ecfd"
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+-------+------+\n",
+            "| age|   name|newage|\n",
+            "+----+-------+------+\n",
+            "|null|Michael|  null|\n",
+            "|  30|   Andy|    30|\n",
+            "|  19| Justin|    19|\n",
+            "+----+-------+------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.withColumn('double_age',df['age']*2).show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ewegwm_GiIob",
+        "outputId": "10415931-84bf-4b6e-9fae-c7bedd39086b"
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+-------+----------+\n",
+            "| age|   name|double_age|\n",
+            "+----+-------+----------+\n",
+            "|null|Michael|      null|\n",
+            "|  30|   Andy|        60|\n",
+            "|  19| Justin|        38|\n",
+            "+----+-------+----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zZQsuNL5iOcR",
+        "outputId": "1cc9997b-52ec-4308-a2f6-4fb07dfc2578"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+-------+\n",
+            "| age|   name|\n",
+            "+----+-------+\n",
+            "|null|Michael|\n",
+            "|  30|   Andy|\n",
+            "|  19| Justin|\n",
+            "+----+-------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.withColumnRenamed('age','my_new_age').show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PZIfdfRNiSqv",
+        "outputId": "0d0627e4-d151-429d-c476-8f7de041c7c6"
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----------+-------+\n",
+            "|my_new_age|   name|\n",
+            "+----------+-------+\n",
+            "|      null|Michael|\n",
+            "|        30|   Andy|\n",
+            "|        19| Justin|\n",
+            "+----------+-------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# TempView"
+      ],
+      "metadata": {
+        "id": "_21vcmyyi0Du"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.createOrReplaceTempView('people')"
+      ],
+      "metadata": {
+        "id": "2DCy0TKni2cN"
+      },
+      "execution_count": 74,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "results = spark.sql(\"SELECT * FROM people\")"
+      ],
+      "metadata": {
+        "id": "HAY-f6Qji7Nf"
+      },
+      "execution_count": 75,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "results.show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NF3VDy25jIQj",
+        "outputId": "a6524d38-b5d8-4bb5-f937-7e0e4b4f8cbb"
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+-------+\n",
+            "| age|   name|\n",
+            "+----+-------+\n",
+            "|null|Michael|\n",
+            "|  30|   Andy|\n",
+            "|  19| Justin|\n",
+            "+----+-------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_results = spark.sql(\"SELECT * FROM people WHERE age=30\")"
+      ],
+      "metadata": {
+        "id": "DeDWqu12jQKW"
+      },
+      "execution_count": 77,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_results.show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4GjLsHPnjWlA",
+        "outputId": "ee88bd96-6c49-4e8b-9ceb-05b71a0ae6f7"
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---+----+\n",
+            "|age|name|\n",
+            "+---+----+\n",
+            "| 30|Andy|\n",
+            "+---+----+\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ]
 }
