--- a/my_spark.ipynb
+++ b/my_spark.ipynb
@@ -5,8 +5,13 @@
     "colab": {
       "name": "my-spark.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOfZHSvYIqrcFuD8GpcYEmq",
+      "collapsed_sections": [
+        "B6Ft81DKY_qU",
+        "iBD_niDDhN74",
+        "qdkfiPtkh2CO",
+        "_21vcmyyi0Du"
+      ],
+      "authorship_tag": "ABX9TyNLiaLoG7XtIgOldEFR5yvE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -909,7 +914,7 @@
       "metadata": {
         "id": "2DCy0TKni2cN"
       },
-      "execution_count": 74,
+      "execution_count": 80,
       "outputs": []
     },
     {
@@ -920,7 +925,7 @@
       "metadata": {
         "id": "HAY-f6Qji7Nf"
       },
-      "execution_count": 75,
+      "execution_count": 81,
       "outputs": []
     },
     {
@@ -933,9 +938,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NF3VDy25jIQj",
-        "outputId": "a6524d38-b5d8-4bb5-f937-7e0e4b4f8cbb"
+        "outputId": "e56acbca-5523-4ecf-e5b7-c89282f1c5e1"
       },
-      "execution_count": 76,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "stream",
@@ -961,7 +966,7 @@
       "metadata": {
         "id": "DeDWqu12jQKW"
       },
-      "execution_count": 77,
+      "execution_count": 83,
       "outputs": []
     },
     {
@@ -974,9 +979,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4GjLsHPnjWlA",
-        "outputId": "ee88bd96-6c49-4e8b-9ceb-05b71a0ae6f7"
+        "outputId": "c59caa81-aff0-45fe-ce5b-0a560fc6e0f1"
       },
-      "execution_count": 78,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "stream",
@@ -991,6 +996,174 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Spark DataFrame Basics Operations**"
+      ],
+      "metadata": {
+        "id": "oIuyZLfHkEIH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Mpc5RmK8kEXz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "O1Wt8rpxkEv-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "edemPRhhkE2v"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Groupby and Aggregate Operations**"
+      ],
+      "metadata": {
+        "id": "crasDF9jkPRX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "887HKDXfkXfe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Ywd0h3MdkXvn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "VlYtrnHakX03"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Missing Data**"
+      ],
+      "metadata": {
+        "id": "M75itbY7kYY_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "ws8dxniJka2Y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "f9djpvBlka42"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "xrCXUwpKkbSa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Dates and Timestamps**"
+      ],
+      "metadata": {
+        "id": "aL50rk9skbal"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "TqK-OoJEke5H"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "FNCnJOpBke8R"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "lnKfNp5dke_p"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
